--- a/src/less/postfooter.less
+++ b/src/less/postfooter.less
@@ -77,6 +77,10 @@
 			color: white;
 			height:15px;
 			margin: auto 0;
+
+			a {
+				text-align: center;
+			}
 			@media(max-width:900px) {
 				width: fit-content !important;
 				padding: 10px;
@@ -252,7 +256,7 @@
 		margin: 20px 0;
 		@media(max-width: 800px) {
 			width: 80%;
-    	margin: 20px auto 0 !important;
+    	margin: 20px auto !important;
 		}
 	}
 
