--- a/src/less/post.less
+++ b/src/less/post.less
@@ -425,7 +425,8 @@
 
 		img {
 			border: 1px solid #cecece;
-			width: 99%;
+			width: auto;
+			max-width: 100%;
 		}
 
 		li {
@@ -565,29 +566,26 @@
 		text-align: center;
 		margin: 0 auto 40px;
 		font-size: 13px;
-		color: #757575;
+		color: #8d929a;
 		white-space: nowrap;
 		font-style: italic;
 		background-color: rgba(33, 69, 138, 0.04);
-		color: #4e5261;
 		padding: 15px 0;
 		margin-top: -10px;
-		width: 99%;
+		width: 100%;
 		@media(max-width: 600px) {
-			margin: 0 0 30px;
-			font-size: .3em;
-			padding: 0;
+			margin-bottom: 30px;
+			margin-top: 0;
+			font-size: 10px;
+			padding: 10px 0;
 			height: auto;
-			line-height: 4;
-			padding: 10px;
 			line-height: 1.5;
-			width: 110%;
+			width: 110% !important;
 			display: block;
 			white-space: normal;
 			color: #54537d;
-			margin-left: calc(~"-50vw + 50%") !important;
+			margin-left: calc(~"-63vw + 50%") !important;
 			margin-right: calc(~"-50vw + 50%") !important;
-			width: auto!important;
 		}
 	}
 
@@ -755,7 +753,7 @@
 				border: 1px solid #eaeaea;
 				margin: 10px auto;
 				display: block;
-				width: 99%;
+				max-width: 99%;
 
 				&:hover {
 					cursor: zoom-in;
@@ -776,7 +774,6 @@
 		}
 
 		img {
-			width: 99%;
 			border: 1px solid #d8d8d8;
 			@media(max-width: 600px) {
 			    margin-bottom: -5px !important;
@@ -790,8 +787,7 @@
 			margin-bottom: 0;
 
 			img {
-				width: 100%;
-				max-height: none;
+				max-width: 99%;
 				margin: auto;
 				border: 1px solid #e2e2e2;
 				border-left: 0;
