--- a/src/less/postpreview.less
+++ b/src/less/postpreview.less
@@ -51,6 +51,12 @@
 		margin: auto;
 		background-size: cover !important;
 		box-shadow: 0 0 8px rgba(93, 97, 140, .35);
+		transition: all .2s ease-out;
+
+		&:hover {
+			opacity: .7;
+			cursor: pointer;
+		}
 	}
 
 	.postimage {
@@ -208,12 +214,12 @@
 			}
 
 			i {
-				height: 15px;
+				height: 22px;
 				display: inline-block;
 			}
 
 			&.tags {
-				padding: 10px;
+				padding: 8px 10px;
 				font-weight: 600;
 
 				span {
@@ -222,6 +228,11 @@
 				}
 				@media(max-width: 600px) {
 					display: none;
+				}
+
+				i {
+					font-size: 22px;
+					font-weight: 400;
 				}
 
 				span {
