--- a/partials/analytics.hbs
+++ b/partials/analytics.hbs
@@ -9,3 +9,14 @@
   gtag('config', 'UA-109840173-1');
 </script>
 <!-- End Google Analytics -->
+
+<!-- Facebook analytics -->
+<!--<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = 'https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v3.1';
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>-->
+<!-- end facebook -->
