no more anon auth

--- a/src/less/fonts.less
+++ b/src/less/fonts.less
@@ -67,9 +67,9 @@
 
 @font-face {font-family: 'DroidSansMonoSlashed';src: url('../../assets/fonts/DroidSansMonoSlashed.ttf');}
 
-/*@font-face {font-family: 'GoogleSans-Regular';src: url('../../assets/fonts/GoogleSans-Regular.ttf');}
+@font-face {font-family: 'GoogleSans-Regular';src: url('../../assets/fonts/GoogleSans-Regular.ttf');}
 @font-face {font-family: 'GoogleSans-Medium';src: url('../../assets/fonts/GoogleSans-Medium.ttf');}
-@font-face {font-family: 'GoogleSans-Bold';src: url('../../assets/fonts/GoogleSans-Bold.ttf');}*/
+@font-face {font-family: 'GoogleSans-Bold';src: url('../../assets/fonts/GoogleSans-Bold.ttf');}
 
 @font-face {font-family: 'CompassSans-Regular';src: url('../../assets/fonts/CompassSans-Regular.woff2');}
 @font-face {font-family: 'CompassSans-Medium';src: url('../../assets/fonts/CompassSans-Medium.woff2');}
