resync mongo changes

--- a/src/less/fonts.less
+++ b/src/less/fonts.less
@@ -67,9 +67,9 @@
 
 @font-face {font-family: 'DroidSansMonoSlashed';src: url('../../assets/fonts/DroidSansMonoSlashed.ttf');}
 
-@font-face {font-family: 'GoogleSans-Regular';src: url('../../assets/fonts/GoogleSans-Regular.ttf');}
-@font-face {font-family: 'GoogleSans-Medium';src: url('../../assets/fonts/GoogleSans-Medium.ttf');}
-@font-face {font-family: 'GoogleSans-Bold';src: url('../../assets/fonts/GoogleSans-Bold.ttf');}
+@font-face {font-family: 'HackerSans-Regular';src: url('../../assets/fonts/HackerSans-Regular.ttf');}
+@font-face {font-family: 'HackerSans-Medium';src: url('../../assets/fonts/HackerSans-Medium.ttf');}
+@font-face {font-family: 'HackerSans-Bold';src: url('../../assets/fonts/HackerSans-Bold.ttf');}
 
 @font-face {font-family: 'CompassSans-Regular';src: url('../../assets/fonts/CompassSans-Regular.woff2');}
 @font-face {font-family: 'CompassSans-Medium';src: url('../../assets/fonts/CompassSans-Medium.woff2');}
@@ -95,14 +95,14 @@
 
 .far {
   font-weight: 400;
-}
+}/*
 @font-face {
   font-family: "Font Awesome 5 Pro";
   font-style: normal;
   font-weight: 900;
   src: url("https://pro.fontawesome.com/releases/v5.5.0/webfonts/fa-solid-900.eot?#iefix") format("embedded-opentype"),url(https://pro.fontawesome.com/releases/v5.5.0/webfonts/fa-solid-900.woff2) format("woff2"),url(https://pro.fontawesome.com/releases/v5.5.0/webfonts/fa-solid-900.woff) format("woff"),url(https://pro.fontawesome.com/releases/v5.5.0/webfonts/fa-solid-900.ttf) format("truetype"),url(https://pro.fontawesome.com/releases/v5.5.0/webfonts/fa-solid-900.svg#fontawesome) format("svg");
 }
-
+*/
 .fa,
 .far,
 .fas {
