--- a/src/less/post.less
+++ b/src/less/post.less
@@ -38,7 +38,7 @@
 		margin: 0;
 		line-height: 1.2;
 		display: block;
-		font-family: 'GoogleSans-Medium', 'CompassSans-Medium' !important;
+		font-family: 'HackerSans-Medium', 'CompassSans-Medium' !important;
 		font-size: 2.5em;
 		font-weight: 500;
 		color: @h1-color;
@@ -71,7 +71,7 @@
 		margin-bottom: 0;
 		line-height: 1.2;
 		color: @h1-color;
-		font-family: 'GoogleSans-Medium', 'CompassSans-Regular';
+		font-family: 'HackerSans-Medium', 'CompassSans-Regular';
 		@media(max-width: 800px) {
 			margin: 10px auto 0;
 			font-size: 1.2em;
