--- a/src/less/postpreview.less
+++ b/src/less/postpreview.less
@@ -78,7 +78,7 @@
 			Line-height: 1.15;
 			margin: 0 0 10px;
 			font-weight: 900;
-			font-family: 'GoogleSans-Medium', 'CompassSans-Regular';
+			font-family: 'HackerSans-Medium', 'CompassSans-Regular';
 			@media(max-width: 600px) {
 				font-size: 160%;
 				margin: 0 0 10px;
@@ -104,7 +104,7 @@
 			text-align: left;
 			font-size: 1.4em;
 			color: #153b52;
-			font-family: 'GoogleSans-Medium', 'CompassSans-Medium',Gordita-Regular,serif;
+			font-family: 'HackerSans-Medium', 'CompassSans-Medium',Gordita-Regular,serif;
 			@media(max-width: 800px) {
 				font-size: 1.18em;
 			}
