--- a/src/less/kanban.less
+++ b/src/less/kanban.less
@@ -246,7 +246,7 @@
           }
 
           h5 {
-            font-size: 1em;
+            font-size: .9em;
             font-family: 'Gordita-Regular';
             color: #3c3d46;
             line-height: 1.2;
