--- a/src/less/cover.less
+++ b/src/less/cover.less
@@ -9,6 +9,10 @@
 	padding: 40px;
 	margin-bottom: 30px;
 
+	.post-title {
+		font-weight: 500;
+	}
+
 	.tag-name {
 		margin-top: 0;
 
@@ -18,8 +22,18 @@
 		}
 	}
 
+	.tag-description {
+		width: 80%;
+    margin: 0 auto;
+		text-align: 14px;
+	}
+
 	.post-count {
 		color: @text-color-light;
+	}
+
+	.post-excerpt {
+		 font-family: 'CompassSans-Regular';
 	}
 
 	h3 {
