--- a/src/less/linkpreview.less
+++ b/src/less/linkpreview.less
@@ -2,7 +2,7 @@
 @import "mixin.less";
 
 .link-preview {
-  padding: 0;
+  padding: 20px;
   transition: all 0.2s ease-out;
   border-radius: 2px;
   margin: 20px auto 30px;
@@ -66,7 +66,7 @@
   .link-info {
     display: inline-block;
     overflow: hidden;
-    padding: 30px;
+    padding: 10px 30px;
     width: -webkit-fill-available;
 
 
