--- a/src/less/postlist.less
+++ b/src/less/postlist.less
@@ -25,7 +25,7 @@
       }
 
       .tag-description {
-        font-size: 1.3em;
+        font-size: 14px;
         font-weight: 600;
         line-height: 1.5;
         max-width: 90%;
