--- a/src/less/post.less
+++ b/src/less/post.less
@@ -223,7 +223,7 @@
 		align-items: center;
 		min-height: 50px;
 		border-bottom: 0;
-		border-left: 5px solid #7daf8a;
+		border-left: 5px solid #94bba0;
 		background: #ecf1ec;
 		@media(max-width: 600px) {
 			padding: 15px 20px;
@@ -234,7 +234,7 @@
 		i {
 			font-size: 37px;
 			margin-right: 25px;
-			color: #7daf8a;
+			color: #94bba0;
 		}
 
 		.blurb-icon {
@@ -258,7 +258,7 @@
 		p {
 			line-height: 1.5!important;
 			font-family: Gordita-Regular;
-			color: #559d6c;
+			color: #69a07a;
 			font-size: 0.9em;
 			width: 100%;
 			margin: 0;
