--- a/src/less/linkpreview.less
+++ b/src/less/linkpreview.less
@@ -26,9 +26,8 @@
     background-position-y: center;
     border-radius: 0;
     transition: all .2s easout;
-    border: 1px solid #cccccc;
-    border-style: solid;
-    border-right: 0;
+    border: 0;
+    border-radius: 2px;
     /*background-color: white;*/
 
     @media(max-width: 800px) {
@@ -77,7 +76,7 @@
 
     h4 {
       margin: 0;
-      font-size: 1.2em;
+      font-size: 1.3em;
       font-weight: 500;
       line-height: 1.2;
       margin-bottom: 15px;
