--- a/partials/widget-authorwebsite.hbs
+++ b/partials/widget-authorwebsite.hbs
@@ -13,7 +13,7 @@
     function websiteCard(website) {
       client.auth.loginWithCredential(new stitch.AnonymousCredential()).then(user => {
        client.callFunction("secret_linkpreview", []).then(results => {
-         const linkpreview_key = results;
+         var linkpreview_key = results;
 
          $.ajax({
            url: 'https://api.linkpreview.net/?key=' + linkpreview_key + '&q=' + website,
