--- a/src/less/nord.less
+++ b/src/less/nord.less
@@ -2,10 +2,12 @@
 .hljs.ini,
 .hljs.vim,
 .hljs.yaml,
+.hljs.css,
 .language-bash,
 .language-ini,
 .language-vim,
-.language-yaml {
+.language-yaml,
+.language-css {
   display: block;
   overflow-x: auto;
   background: #2E3440 !important;
