--- a/src/less/javascript.less
+++ b/src/less/javascript.less
@@ -1,7 +1,7 @@
-pre{
+pre {
 
 & > .hljs.javascript,
-& > .javascript {
+& > .language-javascript {
   display: block;
   overflow-x: auto;
   background: #282B2D !important;
