--- a/src/less/nord.less
+++ b/src/less/nord.less
@@ -179,7 +179,7 @@
     width: 110%;
     height: auto;
     background: #22293a;
-    content: "Bash";
+    content: "Bash" !important;
     display: block;
     font-style: normal;
     font-variant: normal;
