--- a/src/less/table.less
+++ b/src/less/table.less
@@ -18,6 +18,14 @@ table {
     display: block !important;
   }
 
+  &.left {
+    tbody{
+      td {
+        text-align: left;
+      }
+    }
+  }
+
   thead {
   tr {
     border-bottom: 1px solid rgba(0,0,0,.12);
@@ -161,7 +169,7 @@ td, th{
       display: block;
       min-height: 1.25em;
       text-align: left;
-      padding: 15px;
+      padding: 15px !important;
       border-spacing: 0;
       border-collapse: collapse;
     }
