--- a/src/less/table.less
+++ b/src/less/table.less
@@ -86,7 +86,7 @@ tr:nth-child(even) {
 
 
 td, th{
-  padding: 15px 5px;
+  padding: 15px;
   display: table-cell;
   text-align: left;
   vertical-align: middle;
