truly responsive tables

--- a/src/less/code.less
+++ b/src/less/code.less
@@ -16,6 +16,7 @@ pre {
     width: auto !important;
     white-space: pre-line !important;
     max-height: 400px;
+    overflow-x: visible;
   }
 
   code {
@@ -63,7 +64,6 @@ code {
 
 .hljs {
   display: block;
-  overflow-y: hidden!important;
   overflow-x: hidden!important;
   background: #353540!important;
   overflow-wrap: break-word;
