truly responsive tables

--- a/src/less/tags.less
+++ b/src/less/tags.less
@@ -64,7 +64,7 @@
 
   .nosql {
     color: #6eb14a !important;
-    background-color: lighten(#6eb14a, 45%);
+    background-color: #E2EFE6;
 
     * {
       color: #6eb14a !important;
