truly responsive tables

--- a/src/less/post.less
+++ b/src/less/post.less
@@ -965,7 +965,7 @@
 		display: none;
 		@media(max-width: 600px) {
 			display: block;
-			margin: 20px;
+			margin: 30px 30px 20px;
 			width: auto!important;
 		}
 	}
