--- a/src/less/postfooter.less
+++ b/src/less/postfooter.less
@@ -33,11 +33,11 @@
 		a {
 			color: #119ac3;
 			background: #ecf1f9;
-			font-size: 0.8em;
+			font-size: .7em;
 			margin-right: 15px;
-			transition: all 0.3s;
+			transition: all .3s;
 			line-height: 1;
-			padding: 10px 12px;
+			padding: 8px 10px;
 			@media(max-width:800px) {
 				margin: 0 0 8px;
 			}
