truly responsive tables

--- a/src/less/post.less
+++ b/src/less/post.less
@@ -827,7 +827,7 @@
 			margin-right: calc(~"-50vw + 50%") !important;
 			width: 125% !important;
 			margin-top: 25px;
-			margin-bottom: 0;
+			margin-bottom: 30px;
 
 			img {
 				max-width: 99%;
