replaced material with lightbox

--- a/partials/scripts.hbs
+++ b/partials/scripts.hbs
@@ -2,9 +2,9 @@
 <script src="{{asset "/js/includes/highlight.pack.js"}}"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.4/TweenMax.min.js"></script>
 {{#is "post"}}<script src="{{asset "/js/includes/scrollbooster.min.js"}}"></script>{{/is}}
+{{#is "post"}}<script src="{{asset "/js/lightbox.js"}}"></script>{{/is}}
 {{#has author="Matt Alhonte"}}<script async src="{{asset "/js/includes/previews.js"}}"></script>{{/has}}
 <script src="{{asset "/js/main.min.js"}}"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/ghost-search@0.1.0/dist/ghost-search.min.js"></script>
 
 <script>
