--- a/src/less/post.less
+++ b/src/less/post.less
@@ -1,5 +1,6 @@
 @import "variables.less";
 @import "mixin.less";
+@import "lightbox.less";
 
 .post-template {
 	/*====================================================
