--- a/src/less/screen.less
+++ b/src/less/screen.less
@@ -30,6 +30,7 @@
 @import 'signup.less';
 @import 'author-card.less';
 @import 'fonts.less';
+@import 'lightbox.less';
 
 
 /*====================================================
