--- a/src/less/global.less
+++ b/src/less/global.less
@@ -26,6 +26,7 @@ article {
 	p {
 		line-height: 1.7em;
 		font-size: 16px;
+		font-display: block;
 	}
 }
 
@@ -48,10 +49,11 @@ strong {
 .h1,
 h1 {
 	color: @h1-color;
-	font-family: 'CompassSans-Regular', 'Gordita-Medium', serif;
+	font-family: 'HackerSans-Medium', 'CompassSans-Regular', 'Gordita-Medium', sans-serif;
 	font-size: 2.5em;
 	font-weight: 500;
 	color: @header-color;
+	font-display: block;
 }
 
 
@@ -64,12 +66,14 @@ h6 {
 	font-family: 'CompassSans-Regular', 'Gordita-Medium', serif;
 	font-weight: 700;
 	color: @header-color;
+	font-display: block;
 }
 
 h3 {
 	font-family: 'Gordita-Medium', serif;
 	font-weight: 700;
 	color: @header-color;
+	font-display: block;
 }
 
 .h1,
