fixed routing and pagination

--- a/index.hbs
+++ b/index.hbs
@@ -10,7 +10,7 @@
 				<!-- start main post area -->
 				<div class=" main-content">
 					<div class="postlist">
-						{{#get "posts" include="tags,authors"}}{{> loop}} {{pagination}} {{/get}}
+						{{> loop}} {{pagination}}
 					</div>
 				</div>
 		</div>
