added imagemin loop to gulp

--- a/partials/postpreview.hbs
+++ b/partials/postpreview.hbs
@@ -6,8 +6,8 @@
   {{/if}}
 
   {{#if feature_image}}
-      <a href="{{url}}">
-        <div class="featured-media" style="background:url({{feature_image}});" alt="{{{title}}}"></div>
+      <a href="{{url}}" class="featured-media" style="background:url({{feature_image}});" alt="{{{title}}}" id="{{{title}}}">
+        <!--<div class="featured-media" style="background:url({{feature_image}});" alt="{{{title}}}"></div>-->
         </a>
       {{!-- div class="postimage" style="background:url({{feature_image}});" alt="{{{title}}}"></div> --}}
   {{/if}}
