--- a/src/less/widgets.less
+++ b/src/less/widgets.less
@@ -161,7 +161,7 @@
 			-ms-transition: all 0.2s ease;
 			-o-transition: all 0.2s ease;
 			transition: all 0.2s ease;
-			background: #dcecff;
+			background: #d4e5f7;
 			flex-grow: 1;
 			 text-align: center;
 			.transition(all 0.2s ease);
