--- a/src/less/linkpreview.less
+++ b/src/less/linkpreview.less
@@ -17,6 +17,14 @@
     display: block;
   }
 
+  @media(max-width: 600px) {
+    width: 88%;
+  }
+
+  &:hover {
+    cursor:pointer;
+  }
+
   .preview-image {
     display: inline-block;
     min-width: 250px;
@@ -78,7 +86,7 @@
       text-align: left;
       font-family: CompassSans-Medium,Gordita-Medium,serif;
       @media(max-width: 600px) {
-        font-size: 1em;
+        font-size: 1.3em;
         margin-bottom: 5px;
       }
     }
