--- a/src/less/post.less
+++ b/src/less/post.less
@@ -493,6 +493,11 @@
 				line-height: 1.8;
 			}
 
+			a {
+				color: #d88945;
+				font-weight: 600;
+			}
+
 			&::before {
 				margin-bottom: 11px;
 				font-size: 14px;
