--- a/src/less/post.less
+++ b/src/less/post.less
@@ -104,8 +104,8 @@
 		}
 		@media(max-width: 600px) {
 			font-size: 1.65em;
-			margin-left: calc(-50vw + 50%);
-			margin-right: calc(-50vw + 50%);
+			margin-left: calc(~"-50vw + 50%");
+			margin-right: calc(~"-50vw + 50%");
 			width: auto;
 			line-height: 1.3;
 			text-align: center;
@@ -634,11 +634,6 @@
 			margin-left: calc(~"-63vw + 50%") !important;
 			margin-right: calc(~"-50vw + 50%") !important;
 		}
-	}
-
-	#materialbox-overlay {
-		background-color: rgba(0,0,0,.5);
-		position: absolute;
 	}
 }
 
