--- a/src/less/post.less
+++ b/src/less/post.less
@@ -976,9 +976,12 @@
 		width: 100%;
 		bottom: 0;
 		height: 80px;
-		background: linear-gradient(0, rgb(43, 52, 77), rgba(43, 52, 77, 0) 70.71%);
+		background: linear-gradient(0,rgba(22, 24, 31, 1),rgba(43,52,77,0) 70.71%);
 		z-index: 0;
 		display: none;
+		opacity:1;
+		transition: all .4s ease-out;
+
 		@media(max-width: 600px) {
 			display: block;
 		}
