--- a/custom-series-page.hbs
+++ b/custom-series-page.hbs
@@ -18,8 +18,8 @@
 							{{content}}
 						</div>
 						<div class="tag-container">
-							{{#get "tags" filter="feature_image:-null+visibility:internal" include="count.posts,meta_title" order="count.posts desc" }}
-								{{#foreach tags}}
+							{{#get "tags" filter="feature_image:-null" include="count.posts,meta_title" order="count.posts desc" }}
+								{{#foreach tags visibility="internal"}}
 									<div class="tag-wrapper">
 										<a href="{{url}}">
 											<div class="img-wrapper {{#unless feature_image}}no-image{{/unless}}" {{#if feature_image}} style="background-image: url({{feature_image}});" {{/if}}></div>
