--- a/partials/widget-twitter.hbs
+++ b/partials/widget-twitter.hbs
@@ -6,6 +6,7 @@
 			<a class="twitter-timeline" data-chrome="nofooter noheader noscrollbar transparent noborders" data-tweet-limit="5" data-width="344" data-dnt="true" data-link-color="#26a2c7" href="https://twitter.com/HackersSlackers/lists/hackers-and-slackers?ref_src=twsrc%5Etfw"></a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 	</div>
 </div>-->
+<!--
 <div class="widget twitter">
 <h3 class="title">Twitter</h3>
 <a class="twitter-timeline"
@@ -34,5 +35,13 @@
 			CustomizeTwitterWidget(options);
 		});
 
-		</script>
-<!-- end widget -->
+  </script>-->
+  <div class="widget" style="order:10">
+  	<div class="twitter">
+  		<h3 class="title">Twitter</h3>
+  			<script type="text/javascript" src="https://feed.mikle.com/js/fw-loader.js" data-fw-param="78859/"></script>
+  	</div>
+  </div>
+
+
+ <!-- start feedwind code -->  <!-- end feedwind code -->
